syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.dev.utility.grpc";
option java_outer_classname = "RequiresAuthorizationProto";

service RequiresAuthorization {
  rpc ValidateRequires (RequiresRequest) returns (RequiresResponse);
}

message RequiresRequest {
  string org_id = 1;
  string tenant_id = 2;
  string user_id = 3;

  repeated PrivilegeActions required = 4;
  MatchMode match_mode = 5;
}

message PrivilegeActions {
  string privilege = 1;
  repeated string actions = 2;
}

message RequiresResponse {
  bool allowed = 1;
}

enum MatchMode {
  ANY = 0;
  ALL = 1;
}